@@ -379,7 +379,9 @@ extern char *program_name;	/* the basename of the program (as called) */
 enum	{ TBL_FILTER=0	/* tbl */
 	, EQN_FILTER	/* eqn */
 	, PIC_FILTER	/* pic */
+	, GRAP_FILTER	/* grap */
 	, REF_FILTER	/* refer */
+	, VGRIND_FILTER	/* vgrind */
 	, MAX_FILTERS	/* delimiter */
 	};
 
