@@ -1,3 +1,9 @@
+Fri Apr 27 18:10:47 BST 2001  Colin Watson  <cjwatson@debian.org>
+
+	* src/lexgrog.l: Detect grap (.G1) and vgrind (.vS).
+	* include/manconfig.h.in: Add GRAP_FILTER and VGRIND_FILTER to
+	  filter enum.
+
 Fri Apr 27 18:00:04 BST 2001  Colin Watson  <cjwatson@debian.org>
 
 	* New maintainer.
